# w2ner-biomedical

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: biored_base.json
results/: biored_test_metrics.json
scripts/: run_cv.ps1  run_cv.sh  run_predict.ps1  run_predict.sh  run_train.ps1  run_train.sh
w2ner_biomedical/converters/: README.md  _bioc_utils.py  bc5cdr_to_schema.py  biored_to_schema.py
w2ner_biomedical/data/: __init__.py  collate.py  feature_builder.py
w2ner_biomedical/guards/: __init__.py  validators.py
w2ner_biomedical/model/: constants.py  decoding.py  model_config.py  ner_model.py  train.py  trainer.py
w2ner_biomedical/pipeline/: _utils.py  step01_ingest.py  step02_tokenize.py  step03_add_labels.py  step04_finalize_config.py  step05_predict.py  step06_postprocess.py
w2ner_biomedical/specs/: label_spec.json  schemas.py
w2ner_biomedical/tests/: test_converters.py  test_guards.py  test_roundtrip.py  test_schemas.py
w2ner_biomedical/tools/: evaluate.py
